add more templates for difference forms. Like add new task, edit task, login, registration add headers for registration and login forms

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body id="content-area">
+<body>
+<div class="content-area" id="content-area"></div>
+
+<template id="menu-template">
+    <div class="menu">
+        <p class="menu__user-name">User_1</p>
+        <button class="button menu__button" id="add-new">+</button>
+        <button class="button menu__button" id="settings">⚙️</button>
+        <button class="button menu__button" id="logout">🚪</button>
+    </div>
+</template>
 
 <template id="error-template">
     <div class="error">
-        <h3 class="error__header"> error   </h3>
+        <h3 class="error__header"> error </h3>
         <div class="error__messages-area">
             <p class="error__message">Something wrong in that field </p>
         </div>
@@ -20,18 +30,189 @@
 </template>
 
 <template id="login-form-template">
-<div class="login">
-    <form class="login__form login-form">
-        <label for="login-ot-email"  class="login-form__label">Login or e-mail:</label>
-        <input type="text"  class="login-form__input"  id="login-ot-email" name="login-ot-email">
+    <div class="login">
+        <div class="edit-task__header form-header">
+            <h3 class="edit-task__title form-header__title">LogIn</h3>
+            <button class="button close-button form-header__close-button">X</button>
+        </div>
+        <form class="login__form login-form">
+            <label for="login-ot-email" class="login-form__label">Login or e-mail:</label>
+            <input type="text" class="login-form__input" id="login-ot-email" name="login-ot-email">
 
-        <label for="password"  class="login-form__label">Password:</label>
-        <input type="text" class=" login-form__input"  id="password" name="password">
+            <label for="password" class="login-form__label">Password:</label>
+            <input type="text" class=" login-form__input" id="password" name="password">
 
-        <button class="button  login-form__submit" id="login-submit">Login</button>
-    </form>
-</div>
+            <button class="button  login-form__submit" id="login-submit">Login</button>
+        </form>
+    </div>
 </template>
+
+<template id="registration-form-template">
+    <div class="registration">
+        <div class="edit-task__header form-header">
+            <h3 class="edit-task__title form-header__title">Registration</h3>
+            <button class="button close-button form-header__close-button">X</button>
+        </div>
+        <form class="registration__form registration-form">
+            <label  for="registration-login"  class="registration-form__label">registration or e-mail:</label>
+            <input type="text"  class="registration-form__input"  id="registration-login" name="registration-login">
+
+            <label  for="registration-email"  class="registration-form__label">registration or e-mail:</label>
+            <input type="text"  class="registration-form__input"  id="registration-email" name="registration-email">
+
+            <label for="registration-password"  class="registration-form__label">Password:</label>
+            <input type="text" class=" registration-form__input"  id="registration-password" name="registration-password">
+
+            <button class="button  registration-form__submit" id="registration-submit">registration</button>
+        </form>
+    </div>
+</template>
+
+<template id="task-extended-template">
+    <div class="task">
+        <div class="task__header">
+            <div class="task__header-names">
+                <h3 class="task__header-name company-name">Company Name</h3>
+                <h4 class="task__header-name project-name">Project Name</h4>
+            </div>
+            <div class="task__category"></div>
+        </div>
+        <div class="task__info">
+            <div class="task__info-item ">
+                <p class="task__info-text">Budget:</p>
+                <p class="task__info-data budget-info">1000 $</p>
+            </div>
+            <div class="task__info-item">
+                <p class="task__info-text">Total:</p>
+                <p class="task__info-data  total-time-info">10:02:00:00</p>
+            </div>
+            <div class="task__info-item">
+                <p class="task__info-text ">1h cost:</p>
+                <p class="task__info-data  cost-info">500 $</p>
+            </div>
+        </div>
+        <div class="task__session">
+            <button class="button task__button task__button--start">
+                Start
+            </button>
+            <div class="task__session-info">
+                <p class="task__session-info-item session-time-info"> Session time: <span>0:56:01</span></p>
+                <p class="task__session-info-item today-time-info"> Today time: <span>1:56:01</span></p>
+            </div>
+
+        </div>
+        <div class="task__extended">
+            <div class="task__extended-info">
+                <p class="task__session-info-item started-date"> Started: <span>25.08.2024</span></p>
+                <p class="task__session-info-item closed-date"> Closed: <span>---</span></p>
+            </div>
+            <button class="button task__button task__button--start">
+                Finish
+            </button>
+            <button class="button task__button  task__button--edit">
+                Edit
+            </button>
+        </div>
+    </div>
+
+</template>
+
+<template id="task-preview-template">
+    <div class="task">
+        <div class="task__header">
+            <div class="task__header-names">
+                <h3 class="task__header-name company-name">Company Name</h3>
+                <h4 class="task__header-name project-name">Project Name</h4>
+                <p class="task__header-info budget-info">Budget: 1000$</p>
+            </div>
+            <div class="task__category"></div>
+        </div>
+    </div>
+</template>
+
+<template id="add-new-task-template">
+    <div class="new-task">
+        <div class="edit-task__header form-header">
+            <h3 class="edit-task__title form-header__title">Add new task</h3>
+            <button class="button close-button form-header__close-button">X</button>
+        </div>
+
+        <form class="new-task__form task-form">
+            <label for="company-name" class="task-form__label">Company Name:</label>
+            <input type="text" class="task-form__input" list="company-names" id="company-name" name="company-name">
+            <datalist id="company-names">
+                <option value="Company 1">
+                <option value="Company 2">
+                <option value="Company 3">
+            </datalist>
+
+            <label for="project-name" class="task-form__label">Project Name:</label>
+            <input type="text" class="task-form__input" id="project-name" name="project-name">
+
+            <label for="budget" class="task-form__label">Budget:</label>
+            <div class="task-form__currency-wrapper">
+                <input type="text" class="task-form__input task-form__input--amount" id="budget" name="budget">
+                <input type="text" class="task-form__input task-form__input--currency" list="currencyes" id="currency"
+                       name="currency">
+                <datalist id="currencyes" name="currency">
+                    <option value="$">
+                    <option value="Rub">
+                    <option value="Eur">
+                </datalist>
+            </div>
+            <button class="button task-form__submit">Create</button>
+        </form>
+    </div>
+</template>
+
+<template id="edit-task-form-template">
+    <div class="edit-task">
+        <div class="edit-task__header form-header">
+            <h3 class="edit-task__title form-header__title">Edit task</h3>
+            <button class="button close-button form-header__close-button">X</button>
+        </div>
+        <form class="edit-task__form task-form">
+            <label for="company-name" class="task-form__label">Company Name:</label>
+            <input type="text" class="task-form__input" list="company-names" id="company-name" name="company-name">
+            <datalist id="company-names">
+                <option value="Company 1">
+                <option value="Company 2">
+                <option value="Company 3">
+            </datalist>
+
+            <label for="project-name" class="task-form__label">Project Name:</label>
+            <input type="text" class="task-form__input" id="project-name" name="project-name">
+
+            <label for="budget" class="task-form__label">Budget:</label>
+            <div class="task-form__currency-wrapper">
+                <input type="text" class="task-form__input task-form__input--amount" id="budget" name="budget">
+                <input type="text" class="task-form__input task-form__input--currency" list="currencyes" id="currency"
+                       name="currency">
+                <datalist id="currencyes" name="currency">
+                    <option value="$">
+                    <option value="Rub">
+                    <option value="Eur">
+                </datalist>
+            </div>
+
+            <label for="today-time" class="task-form__label">Today time:</label>
+            <input type="text" class="task-form__input" id="today-time" name="today-time">
+
+            <label for="started-at" class="task-form__label">Started at:</label>
+            <input type="text" class="task-form__input" id="started-at" name="started-at">
+
+
+            <div class="edit-task__checkbox-wrapper">
+                <label for="is-closed" class="task-form__label">Closed:</label>
+                <input type="checkbox" class="task-form__input" id="is-closed" name="is-closed">
+            </div>
+            <input type="text" class="task-form__input" id="closed-at" name="closed-at">
+
+            <button class="button task-form__submit">Apply</button>
+        </form>
+    </div>
+</template>
+
 </body>
 <script src="index.js" type="module"></script>
 </html>
